# coco-froc-analysis

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .publish.sh  LICENSE  README.md  cli_froc_analysis.py  froc.py  froc_analysis.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  setup.py
.github/workflows/: build.yml  test.yml
coco_froc_analysis/: __init__.py  __main__.py  cli_froc_analysis.py  utils.py
coco_froc_analysis/count/: __init__.py  bootstrap_count_curve.py  count_curve.py  count_stats.py
coco_froc_analysis/froc/: __init__.py  bootstrap_froc_curve.py  froc_curve.py  froc_stats.py
docs/: coco_froc_analysis.html  index.html  search.js
docs/coco_froc_analysis/: count.html  froc.html
docs/coco_froc_analysis/count/: bootstrap_count_curve.html  (+2 more)
froc/: bootstrap_curve.py  froc_curve.py  froc_stats.py  utils.py
froc_analysis/: __init__.py  bootstrap_count_curve.py  bootstrap_curve.py  bootstrap_froc_curve.py  count_curve.py  count_stats.py  froc_curve.py  froc_stats.py  utils.py
froc_analysis/count/: __init__.py  bootstrap_count_curve.py  count_curve.py  count_stats.py
froc_analysis/froc/: __init__.py  bootstrap_froc_curve.py  froc_curve.py  froc_stats.py
tests/: count_curve_test.py  froc_curve_test.py  id2annotation_test.py  iou_test.py  test_count_curve.py  test_froc_curve.py  test_id2annotation.py  test_iou.py  test_update_scores.py  update_scores_test.py
tests/example_coco_data/: face-mask.json  perfect_predictions.json  single_error_per_image_low_confidence_predictions.json  single_error_per_image_predictions.json
(+3 files in other folders)
