[tool.poetry]
name = "coco-froc-analysis"
version = "0.1.0"
description = "FROC analysis for COCO detections for Detectron(2) and OpenMMLab"
authors = ["Alex Olar <olaralex666@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "coco_froc_analysis"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
tqdm = "^4.64.1"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
